BaSP-2022-W6: Fixes made for JS

--- a/Semana-06/styles/landing.css
+++ b/Semana-06/styles/landing.css
@@ -204,6 +204,15 @@ main{
     margin: 2% 0%;
 }
 
+.extras a{
+    color: #DBDBDB;
+}
+
+.extras hr{
+    border: 1px solid #000;
+    background-color: #000;
+}
+
 @media(max-width:768px){
     main{
         width: 100%;
