--- a/Semana-06/styles/password.css
+++ b/Semana-06/styles/password.css
@@ -26,52 +26,42 @@ main{
     align-items: center;
 }
 
-.sign-up{
+.recover-password{
     display: flex;
     flex-direction: column;
     align-items: center;
     color: #373867;
-    margin: 1.5% 0%;
+    margin: 1.5% 0% 15% 0%;
     width: 100%;
 }
 
-.sign-up h3{
+.recover-password h3{
     margin: 1% 0%;
 }
 
-.sign-up form{
+.recover-password form{
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    margin: 1% 0%;
-    width: 100%;
-}
-
-.sign-up form fieldset{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
     align-items: center;
+}
+
+.recover-password form{
+    margin: 1% 0%;
+    width: 30%;
+}
+
+.recover-password form label{
+    margin: 1% 0%;
+}
+
+.recover-password form input{
     width: 100%;
-}
-
-.sign-up fieldset div{
-    display: flex;
-    flex-direction: column;
-    margin: 1%;
-}
-
-.sign-up form fieldset div label{
     margin: 1% 0%;
 }
 
-.sign-up form fieldset div input{
-    margin: 1% 0%;
-}
-
-.sign-up form button{
+.recover-password form input[type=submit]{
     align-self: center;
-    width: 15%;
+    width: 30%;
 }
 
 @media(max-width:768px){
@@ -91,8 +81,8 @@ main{
         justify-content: center;
         align-items: center;
     }
-    
-    .sign-up form{
+
+    .recover-password form{
         width: 80%;
     }
 }
@@ -127,12 +117,5 @@ main{
 
     .logo img{
         margin:0%;
-    }
-
-    .sign-up form fieldset{
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
     }
 }
