--- a/Semana-06/views/password-recovery.html
+++ b/Semana-06/views/password-recovery.html
@@ -4,17 +4,17 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Trackgenix | Sign up</title>
+        <title>Trackgenix | Password recovery</title>
         <link rel="stylesheet" type="text/css" href="../styles/reset.css">
         <link rel="stylesheet" type="text/css" href="../styles/styles.css">
         <link rel="stylesheet" type="text/css" href="../styles/header.css">
-        <link rel="stylesheet" type="text/css" href="../styles/sign-up.css">
+        <link rel="stylesheet" type="text/css" href="../styles/password.css">
         <link rel="stylesheet" type="text/css" href="../styles/footer.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
         <link rel="icon" href="../assets/favicon.ico">
-        <script type="text/javascript" src="../javascript/sign-up.js"></script>
+        <script type="text/javascript" src="../javascript/login.js"></script>
     </head>
     <body>
         <header aria-label="Header">
@@ -45,52 +45,13 @@
                     <h2>DATA&nbsp;MANAGEMENT</h2>
                 </div>
             </section>
-            <section class="container sign-up"aria-label="Sign-up form">
-                <h3 aria-hidden="true">Sign up</h3>
-                <form aria-label="Enter your credentials">
-                    <fieldset>
-                        <div>
-                            <label>First Name</label>
-                            <input type="name" name="firstName" placeholder="Click here to type">
-                            <template>Should be at least 4 letters long</template>
-                            <label>Last Name</label>
-                            <input type="name" name="lastName" placeholder="Click here to type">
-                            <template>Should be at least 4 letters long</template>
-                            <label>DNI</label>
-                            <input type="number" name="DNI" placeholder="Click here to type">
-                            <template>Should be at least 8 numbers long</template>
-                            <label>Birthday</label>
-                            <input type="date" name="birth" placeholder="Click here to type">
-                            <template>Invalid format</template>
-                            <label>Phone number</label>
-                            <input type="tel" name="phone" placeholder="Click here to type">
-                            <template>Should be 10 numbers long</template>
-                            <label>Address</label>
-                            <input type="text" name="address" placeholder="Click here to type">
-                            <template>Format: Address 12345; min lenght: 5</template>
-                        </div>
-                        <div>
-                            <label>Location</label>
-                            <input type="text" name="location" placeholder="Click here to type">
-                            <template>Should be at least 4 letters long</template>
-                            <label>Post code</label>
-                            <input type="num" name="postCode" placeholder="Click here to type">
-                            <template>Should be 4 or 5 numbers long</template>
-                            <label>Email</label>
-                            <input type="email" name="email" placeholder="Click here to type">
-                            <template>Invalid format</template>
-                            <label>Confirm email</label>
-                            <input type="email" name="emailConfirm" placeholder="Click here to type">
-                            <template>Email does not match</template>
-                            <label>Password</label>
-                            <input type="password" name="password" placeholder="Click here to type">
-                            <template>Should be at least 8 letters long</template>
-                            <label>Confirm password</label>
-                            <input type="password" name="passwordConfirm" placeholder="Click here to type">
-                            <template>Password does not match</template>
-                        </div>
-                    </fieldset>
-                    <button class="light-green-button" aria-label="Click to validate and sign up">Sign up</button>
+            <section class="container recover-password" aria-label="Recover your password">
+                <h3 aria-hidden="true">Recover your password</h3>
+                <form aria-label="Enter your email">
+                    <label>Email</label>
+                    <input required type="email" name="email" placeholder="Click here to type">
+                    <template>Email not found</template>
+                    <input class="light-green-button" type="submit" value="Send email" aria-label="Click to validate and sign in">
                 </form>
             </section>
         </main>
