BaSP-2022-W7: login now authenticates user(s)

--- a/Semana-07/styles/password.css
+++ b/Semana-07/styles/password.css
@@ -59,9 +59,10 @@ main{
     margin: 1% 0%;
 }
 
-.recover-password form input[type=submit]{
+.recover-password form button{
     align-self: center;
     width: 30%;
+    margin: 2%;
 }
 
 @media(max-width:768px){
