--- a/Semana-07/views/password-recovery.html
+++ b/Semana-07/views/password-recovery.html
@@ -48,10 +48,10 @@
             <section class="container recover-password" aria-label="Recover your password">
                 <h3 aria-hidden="true">Recover your password</h3>
                 <form aria-label="Enter your email">
-                    <label>Email</label>
+                    <label>Please enter your account's email address below</label>
                     <input required type="email" name="email" placeholder="Click here to type">
                     <template>Email not found</template>
-                    <input class="light-green-button" type="submit" value="Send email" aria-label="Click to validate and sign in">
+                    <button class="light-green-button" type="submit" aria-label="Click to send password recovery email">Send email</button>
                 </form>
             </section>
         </main>
