BaSP-2022-W7: sign-up now pseudo-registers users

--- a/Semana-07/views/sign-up.html
+++ b/Semana-07/views/sign-up.html
@@ -60,7 +60,7 @@
                             <input id="dni-field" type="number" name="DNI" placeholder="Click here to type">
                             <p class="dni-na">Minimum of 8 numbers</p>
                             <label for="birthday-field">Birthday</label>
-                            <input id="birthday-field" type="date" name="birth" placeholder="Click here to type">
+                            <input id="birthday-field" type="date" name="birthday">
                             <p class="birthday-na">Invalid format</p>
                             <label for="phone-number-field">Phone number</label>
                             <input id="phone-number-field" type="tel" name="phone" placeholder="Click here to type">
